remove package install wait time
